[gd_scene load_steps=17 format=3 uid="uid://1jyrwjefyamx"]

[ext_resource type="Texture2D" uid="uid://djnwmfau7f5el" path="res://assets/textures/intro/intro.png" id="1_pqnnp"]
[ext_resource type="Script" path="res://scripts/intro/intro.gd" id="2_s2a4l"]
[ext_resource type="Texture2D" uid="uid://bfyg2pttb3ova" path="res://assets/textures/intro/shooting_star.png" id="3_nayak"]
[ext_resource type="Script" path="res://scripts/intro/shooting_star.gd" id="4_ulvl0"]
[ext_resource type="AudioStream" uid="uid://bvjodbvddpib6" path="res://assets/sounds/sfx/intro/SFX_SHOOTING_STAR.wav" id="5_xijc1"]
[ext_resource type="Script" path="res://scripts/utils/movement.gd" id="6_l0pl0"]
[ext_resource type="PackedScene" uid="uid://d265mlvp22b56" path="res://scenes/intro/pokemon_battle.tscn" id="9_6emeo"]
[ext_resource type="Script" path="res://scripts/intro/tiny_star_factory.gd" id="9_kysoj"]
[ext_resource type="PackedScene" uid="uid://y1kure5secom" path="res://scenes/intro/title_screen.tscn" id="10_fwip2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_12fw8"]
atlas = ExtResource("1_pqnnp")
region = Rect2(0, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwhd6"]
atlas = ExtResource("1_pqnnp")
region = Rect2(160, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsjl8"]
atlas = ExtResource("1_pqnnp")
region = Rect2(0, 144, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqq8j"]
atlas = ExtResource("1_pqnnp")
region = Rect2(160, 144, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_52tcs"]
atlas = ExtResource("1_pqnnp")
region = Rect2(0, 288, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_brdq6"]
atlas = ExtResource("1_pqnnp")
region = Rect2(160, 288, 160, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_oikhw"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_12fw8")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_fwhd6")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_gsjl8")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_rqq8j")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_52tcs")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_brdq6")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}]

[node name="Intro" type="AnimatedSprite2D"]
z_index = -5
position = Vector2(80, 72)
sprite_frames = SubResource("SpriteFrames_oikhw")
frame = 5
frame_progress = 1.0
script = ExtResource("2_s2a4l")

[node name="ShootingStar" type="Sprite2D" parent="."]
top_level = true
texture = ExtResource("3_nayak")
script = ExtResource("4_ulvl0")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="ShootingStar"]

[node name="StarSound" type="AudioStreamPlayer" parent="ShootingStar"]
stream = ExtResource("5_xijc1")

[node name="Movement" type="Node2D" parent="ShootingStar"]
script = ExtResource("6_l0pl0")

[node name="BottomBlackBar" type="ColorRect" parent="."]
visible = false
z_as_relative = false
custom_minimum_size = Vector2(160, 32)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -112.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="TopBlackBar" type="ColorRect" parent="."]
visible = false
z_as_relative = false
custom_minimum_size = Vector2(160, 32)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = -72.0
offset_bottom = -32.0
grow_horizontal = 2
size_flags_vertical = 8
color = Color(0, 0, 0, 1)

[node name="TinyStarFactory" type="Node" parent="."]
script = ExtResource("9_kysoj")

[node name="PokemonBattleTimer" type="Timer" parent="."]
one_shot = true

[node name="PokemonBattle" parent="." instance=ExtResource("9_6emeo")]

[node name="TitleScreen" parent="." instance=ExtResource("10_fwip2")]
top_level = true

[connection signal="call_shooting_star" from="." to="ShootingStar" method="_on_call_shooting_star"]
[connection signal="frame_changed" from="." to="." method="_on_frame_changed"]
[connection signal="left_screen" from="ShootingStar" to="." method="_on_shooting_star_left_screen"]
[connection signal="screen_exited" from="ShootingStar/VisibleOnScreenNotifier2D" to="ShootingStar" method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="ShootingStar/StarSound" to="ShootingStar" method="_on_star_sound_finished"]
[connection signal="tiny_stars_created" from="TinyStarFactory" to="." method="_on_tiny_stars_created"]
[connection signal="timeout" from="PokemonBattleTimer" to="." method="_on_pokemon_battle_timer_timeout"]
[connection signal="pokemon_battle_ended" from="PokemonBattle" to="." method="_on_pokemon_battle_pokemon_battle_ended"]
